src/test/ui/pattern/bindings-after-at/feature-gate-bindings_after_at.rs
fn main() {
    let x @ y = 0; //~ ERROR pattern bindings after an `@` are unstable
}
